FFixed Spacing Issue

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -116,7 +116,7 @@ footer {
 
 .colophan {
 	.copyright {
-		padding: $large-gap $none;
+		padding: $large-gap $none $xxlarge-gap $none;
 		text-align: center;
 		p {
 			font-size: $font-med;
